<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AboutTheGame"
    android:padding="10dp">

    <TextView
        android:id="@+id/aboutTheGameHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutTheGame"
        android:textSize="33sp"
        android:fontFamily="@font/my_font"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/aboutTheGameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/my_font"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/gameExplanation"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheGameHeadline" />

    <TextView
        android:id="@+id/aboutTheGameInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/my_font"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/gameExplanation2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheGameInfo" />

    <TextView
        android:id="@+id/aboutTheGameInfo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/my_font"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/gameExplanation3"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheGameInfo2" />

    <TextView
        android:id="@+id/aboutTheGameInfo4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/my_font"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/gameExplanation4"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheGameInfo3" />

    <TextView
        android:id="@+id/aboutTheGameInfo5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/my_font"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/gameExplanation5"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheGameInfo4" />

    <Button
        android:id="@+id/buttonBackToMainMenu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:drawableLeft="@drawable/backicon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/my_font"
        android:padding="16dp"
        android:text="@string/backToMainMenu"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheGameInfo5" />

</androidx.constraintlayout.widget.ConstraintLayout>
