<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Preferences"
    android:padding="5dp">

    <TextView
        android:id="@+id/preferencesHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:textSize="33sp"
        android:fontFamily="@font/my_font"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/languageContainer" />

    <LinearLayout
        android:id="@+id/languageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/preferencesHeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/languagelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/language"
        android:textSize="30sp"
        android:fontFamily="@font/my_font"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

    <ImageButton
        android:id="@+id/ukFlag"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ukflag"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginEnd="32dp"/>

    <ImageButton
        android:id="@+id/norwegianFlag"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/norwayflag"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginEnd="32dp"/>

    <ImageButton
        android:id="@+id/germanFlag"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/germanyflag"
        android:background="?attr/selectableItemBackgroundBorderless" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/questionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/languageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        android:fontFamily="@font/my_font"
        android:textSize="30sp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:textColor="@color/black"
        android:text="5"
        android:textSize="30sp"
        android:fontFamily="@font/my_font"
        android:layout_marginEnd="10dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:textColor="@color/black"
        android:text="10"
        android:textSize="30sp"
        android:fontFamily="@font/my_font"
        android:layout_marginEnd="10dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:textColor="@color/black"
        android:text="15"
        android:textSize="30sp"
        android:fontFamily="@font/my_font"
        android:padding="16dp"/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonBackToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:drawableLeft="@drawable/backicon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/my_font"
        android:padding="16dp"
        android:text="@string/backToMainMenu"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionsContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>